--- a/assets/scss/_default/home.scss
+++ b/assets/scss/_default/home.scss
@@ -1,161 +1,10 @@
- @include themify($themes) {
+@import '../common-styles/generalList';
+
+@include themify($themes) {
     .home-main {
         padding-bottom: calc((100% - #{$width-percent-of-screen}) / 2);
         background-color: themed(webpage-background);
         font-size: $font-size;
         font-family: $font-family;
-    }
-
-    .home-container {
-        margin: 0 auto;
-        width: calc( #{$width-percent-of-screen} - 2px );
-        height: 300px;
-        display: flex;
-        flex-direction: row;
-        margin-bottom: calc(( 100% - #{$width-percent-of-screen}) / 2);
-    } 
-
-    .home-container:hover {
-        cursor:pointer;
-        overflow: hidden;
-    }
-    .home-container:nth-child(odd) {
-        background-color: themed(logo-green);
-        border: 1px solid themed("logo-green");
-    }
-    
-    .home-container:nth-child(even) {
-        background-color: themed(logo-yellow);
-        border: 1px solid themed("logo-yellow");
-    }
-
-    .home-container:last-child {
-        margin-bottom: 0;
-    }
-
-    .home-picture {
-        width: calc(( #{$width-percent-of-screen} - 4px) / 1.7 );
-        object-fit: cover;
-        transition: all 150ms ease;
-        background-color: white;
-    }
-
-    .home-textbox {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        z-index: 3;
-        transition: all 150ms ease;
-     }
-
-    .home-shifted {
-        flex: 2;
-        display: flex;
-        flex-direction: column;
-        margin-left: -60px;
-        margin-top: 30px;
-        margin-right: 30px;
-        background-color: themed(textbox-background);
-    }
-
-    .home-container:hover .home-picture {
-        transform: scale(1.05);
-    }
-    
-    .home-container:hover .home-title {
-        color: themed(logo-green);
-        font-weight: bold;
-    }
-
-    .home-title {
-        flex: 0.7;
-        margin-top: 10px;
-        position: relative;
-        font-size: 20px;
-        padding-left: 2.5%;
-        color: themed(logo-red);
-        transition: all 150ms ease;
-        
-        &:after {
-            content: "";
-            display: block;
-            position: absolute;
-            width: 95%;
-            height: 0.6px;
-            background-color: themed(logo-red);
-            background-color: black;
-            bottom: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-          }
-    }
-
-    .home-description {
-        flex: 2;
-        margin-top: 10px;
-        margin-left: 2.5%;
-        margin-right: 2.5%;
-        color: themed(text-black);
-        white-space:inherit;
-        max-height: calc( 300px / 2);
-        overflow: hidden;
-    }
-
-    .home-date {
-        margin-top: 30px;
-        margin-right: 10px;
-        height: 25px;
-        text-align: right;
-        vertical-align:middle;
-    }
-
-    .home-margin {
-        padding-bottom: calc( ( 100% - #{$width-percent-of-screen} ) );
-        background-color: themed(webpage-background);
-    }
-
-    @media (max-width: 840px) {
-        .home-container {
-            margin: 0 auto;
-            width: calc( #{$width-percent-of-screen} - 2px );
-            height: 500px;
-            display: flex;
-            flex-direction: column;
-            margin-bottom: calc(( 100% - #{$width-percent-of-screen} ) / 2);
-        } 
-    
-        .home-picture {
-            width: auto;
-            height: 250px;
-            object-fit: cover;
-        }
-    
-        .home-shifted {
-            flex: 2;
-            display: flex;
-            flex-direction: column;
-            margin-left: 20px;
-            margin-top: 20px;
-            margin-right: 20px;
-            background-color: themed(textbox-background);
-        }
-
-        .home-description {
-            flex: 2;
-            margin-top: 10px;
-            margin-left: 2.5%;
-            margin-right: 2.5%;
-            color: themed(text-black);
-            white-space:inherit;
-            max-height: calc( 300px / 2);
-        }
-    
-        .home-date {
-            margin-top: 20px;
-            margin-right: 10px;
-            height: 25px;
-            text-align: right;
-            vertical-align:middle;
-        }
     }
 }
