--- a/assets/scss/_default/single.scss
+++ b/assets/scss/_default/single.scss
@@ -20,7 +20,7 @@
     .single-content {
       max-width: var(--contents-width);
       margin-left: var(--contents-margin);
-      background-color: themed(website-background);
+      background-color: themed(textbox-background);
       padding: 10px 10px;
     }
 
