--- a/layouts/partials/home/mainswiper.html
+++ b/layouts/partials/home/mainswiper.html
@@ -1,4 +1,4 @@
-<div id = "js-swipers" class="light-theme">
+<div id = "js-theme-swipers" class="light-theme">
     <section class="swipers">
         <div class="mainswiper swiper">
             <div id="js-img11" class="swiper-wrapper">
@@ -19,7 +19,7 @@
     </section>
     <script>
         // Dark mode    
-        var jsSwipers = document.getElementById("js-swipers");
+        var jsSwipers = document.getElementById("js-theme-swipers");
         if (localStorage.getItem("darkMode") == "true") {
             jsSwipers.className = "light-theme";
         } else {
