--- a/assets/scss/_default/list.scss
+++ b/assets/scss/_default/list.scss
@@ -1,5 +1,6 @@
 @import '../common-styles/logo';
 @import '../common-styles/pictures';
+@import '../common-styles/generalList';
 
 @include themify($themes) {
     .list {
@@ -16,154 +17,5 @@
             padding: 17px;
             margin-bottom: 20px;
         }
-    
-        .list-container {
-            margin: 0 auto;
-            width: calc( #{$width-percent-of-screen} - 2px );
-            height: 300px;
-            display: flex;
-            flex-direction: row;
-            margin-bottom: calc((100% - #{$width-percent-of-screen}) / 2);
-        } 
-
-        .list-container:hover {
-            cursor:pointer;
-            overflow: hidden;
-        }
-        .list-container:nth-child(odd) {
-            background-color: themed(logo-green);
-            border: 1px solid themed("logo-green");
-        }
-        
-        .list-container:nth-child(even) {
-            background-color: themed(logo-yellow);
-            border: 1px solid themed("logo-yellow");
-        }
-
-        .list-container:last-child {
-            margin-bottom: 0   ;
-        }
-
-        .list-textbox {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            z-index: 3;
-            transition: all 150ms ease;
-        }
-
-        .list-shifted {
-            flex: 2;
-            display: flex;
-            flex-direction: column;
-            margin-left: -60px;
-            margin-top: 30px;
-            margin-right: 30px;
-            background-color: themed(website-background);
-        }
-        
-        .list-container:hover .list-picture {
-            transform: scale(1.05);
-        }
-        
-        .list-container:hover .list-title {
-            color: themed(logo-green);
-            font-weight: bold;
-        }
-        
-        .list-title {
-            flex: 0.7;
-            margin-top: 10px;
-            position: relative;
-            font-size: 20px;
-            padding-left: 2.5%;
-            color: themed(logo-red);
-            transition: all 150ms ease;
-
-            &:after {
-                content: "";
-                display: block;
-                position: absolute;
-                width: 95%;
-                height: 0.6px;
-                background-color: themed(logo-red);
-                background-color: black;
-                bottom: 10px;
-                left: 50%;
-                transform: translateX(-50%);
-            }
-        }
-
-        .list-description {
-            flex: 2;
-            margin-top: 10px;
-            margin-left: 2.5%;
-            margin-right: 2.5%;
-            color: themed(text-black);
-            white-space:inherit;
-            max-height: calc( 300px / 2);
-            overflow: hidden;
-        }
-
-        .list-date {
-            margin-top: 30px;
-            margin-right: 10px;
-            height: 25px;
-            text-align: right;
-            vertical-align:middle;
-        }
-
-        .list-picture {
-            width: calc(( #{$width-percent-of-screen} - 4px) / 1.7 );
-            object-fit: cover;
-            transition: all 150ms ease;
-        }    
     }
-
-    @media (max-width: 840px) {
-        .list {
-            .list-container {
-                margin: 0 auto;
-                width: calc( #{$width-percent-of-screen} - 2px );
-                height: 500px;
-                display: flex;
-                flex-direction: column;
-                margin-bottom: calc(( 100% - #{$width-percent-of-screen} ) / 2);
-            } 
-        
-            .list-picture {
-                width: auto;
-                height: 250px;
-                object-fit: cover;
-            }
-        
-            .list-shifted {
-                flex: 2;
-                display: flex;
-                flex-direction: column;
-                margin-left: 20px;
-                margin-top: 20px;
-                margin-right: 20px;
-                background-color: themed(textbox-background);
-            }
-
-            .list-description {
-                flex: 2;
-                margin-top: 10px;
-                margin-left: 2.5%;
-                margin-right: 2.5%;
-                color: themed(text-black);
-                white-space:inherit;
-                max-height: calc( 300px / 2);
-            }
-        
-            .list-date {
-                margin-top: 20px;
-                margin-right: 10px;
-                height: 25px;
-                text-align: right;
-                vertical-align:middle;
-            }
-        }
-   }
 }
