--- a/layouts/partials/common/footer.html
+++ b/layouts/partials/common/footer.html
@@ -1,4 +1,4 @@
-<div id = "js-footer" class="light-theme">
+<div id="js-theme-footer" class="light-theme">
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-social-buttons">
@@ -30,34 +30,24 @@
                     </div>
                     <div class="donate Patenschaft">
                         <p>Eine Patenschaft sichert einem Kind die tägliche warme Mahlzeit:</p>
-                        <button class="button-patenschaft" onclick="window.location.href='./Helfen/pateWerden';">Eine Patenschaft übernehmen</button>
-                    </div>
-                    <div class="donate Newsletter">
-                        <!-- <p>Möchten Sie unseren Newsletter abonnieren?</p>
-                        <button>Newsletter abonnieren</button> -->
+                        <button class="button-patenschaft" onclick="window.location.href='./Helfen/pateWerden';">Eine
+                            Patenschaft übernehmen</button>
                     </div>
                 </div>
-                <!-- <div class="donate-paypal">
-                    <form action="https://www.paypal.com/donate" method="post" target="_top">
-                        <input type="hidden" name="hosted_button_id" value="JVEF3JGFNK2ML" />
-                        <input type="image" src="https://www.paypalobjects.com/de_DE/DE/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Spenden mit dem PayPal-Button" />
-                        <img alt="" border="0" src="https://www.paypal.com/de_DE/i/scr/pixel.gif" width="1" height="1" />
-                    </form>
-                </div>                         -->
             </div>
             <div class="footer-copyright">
                 <p>Copyright {{ now.Year }}. All rights reserved.</p>
             </div>
         </div>
         <script>
-            // Dark mode    
-            var jsFooter = document.getElementById("js-footer");
+            // Darkmode
+            var jsTheme = document.getElementById("js-theme-footer");
             if (localStorage.getItem("darkMode") == "true") {
-                jsFooter.className = "light-theme";
+                jsTheme.className = "light-theme";
             } else {
-                jsFooter.className = "dark-theme";
+                jsTheme.className = "dark-theme";
             }
         </script>
+
     </footer>
 </div>
-
