--- a/layouts/partials/common/megamenu.html
+++ b/layouts/partials/common/megamenu.html
@@ -138,7 +138,7 @@
                                     <a href="Helfen/PatenschaftVerwalten">{{ T "tHPatenschaftenService" }}</a>
                                 </li>
                                 <li>
-                                    <a href="#">{{ T "thDonate" }}</a>
+                                    <a href="Helfen/Spenden">{{ T "thDonate" }}</a>
                                 </li>
                                 <li>
                                     <a href="#">{{ T "thDonateProject" }}</a>
