--- a/layouts/partials/common/megamenu.html
+++ b/layouts/partials/common/megamenu.html
@@ -141,7 +141,7 @@
                                     <a href="Helfen/Spenden">{{ T "thDonate" }}</a>
                                 </li>
                                 <li>
-                                    <a href="#">{{ T "thDonateProject" }}</a>
+                                    <a href="Helfen/GezieltSpenden">{{ T "thDonateProject" }}</a>
                                 </li>
                             </ul>
                         </div>
