--- a/public/scss/main.css
+++ b/public/scss/main.css
@@ -2945,7 +2945,8 @@
   margin-top: 2px;
   margin-bottom: 2px; }
   .light-theme .profile-container img {
-    padding: 2px; }
+    padding: 2px;
+    width: 200px; }
   .light-theme .profile-container div {
     padding: 10px; }
     .light-theme .profile-container div p {
@@ -3136,7 +3137,8 @@
   margin-top: 2px;
   margin-bottom: 2px; }
   .dark-theme .profile-container img {
-    padding: 2px; }
+    padding: 2px;
+    width: 200px; }
   .dark-theme .profile-container div {
     padding: 10px; }
     .dark-theme .profile-container div p {
