--- a/layouts/partials/common/megamenu.html
+++ b/layouts/partials/common/megamenu.html
@@ -33,7 +33,7 @@
                                     <a href="Finanzen">{{ T "AFinance" }}</a>
                                 </li>
                                 <li>
-                                    <a href="#">{{ T "AStatute" }}</a>
+                                    <a href="wirUeberUns/dieSatzung">{{ T "AStatute" }}</a>
                                 </li>
                                 <li>
                                     <a href="#">{{ T "APress" }}</a>
