--- a/public/scss/main.css
+++ b/public/scss/main.css
@@ -3202,6 +3202,90 @@
     border: none;
     background: transparent; }
 
+.light-theme .article-line {
+  display: flex;
+  align-items: center;
+  border: 2px solid #fcd116;
+  border-radius: 10px;
+  padding: 10px 20px;
+  background-color: white;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  transition: all 0.25s ease;
+  margin-bottom: 5px; }
+  .light-theme .article-line .article-column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 60px;
+    width: 150px; }
+    .light-theme .article-line .article-column .image-logo {
+      margin-top: 5px;
+      width: auto;
+      max-width: 100px;
+      height: auto;
+      max-height: 35px; }
+    .light-theme .article-line .article-column .article-date {
+      font-size: 12px;
+      padding-top: 5px; }
+  .light-theme .article-line .article-title {
+    padding: 10px;
+    margin-left: 10px;
+    color: black; }
+
+.light-theme .article-title:hover {
+  cursor: pointer;
+  color: blue; }
+
+@media (max-width: 580px) {
+  .light-theme .article-line {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start; } }
+
+.dark-theme .article-line {
+  display: flex;
+  align-items: center;
+  border: 2px solid #534504;
+  border-radius: 10px;
+  padding: 10px 20px;
+  background-color: #575651;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  transition: all 0.25s ease;
+  margin-bottom: 5px; }
+  .dark-theme .article-line .article-column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 60px;
+    width: 150px; }
+    .dark-theme .article-line .article-column .image-logo {
+      margin-top: 5px;
+      width: auto;
+      max-width: 100px;
+      height: auto;
+      max-height: 35px; }
+    .dark-theme .article-line .article-column .article-date {
+      font-size: 12px;
+      padding-top: 5px; }
+  .dark-theme .article-line .article-title {
+    padding: 10px;
+    margin-left: 10px;
+    color: lightgrey; }
+
+.dark-theme .article-title:hover {
+  cursor: pointer;
+  color: blue; }
+
+@media (max-width: 580px) {
+  .dark-theme .article-line {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start; } }
+
 .light-theme .single {
   background-color: white;
   font-family: "Calibri", sans-serif;
