--- a/layouts/partials/common/megamenu.html
+++ b/layouts/partials/common/megamenu.html
@@ -36,7 +36,7 @@
                                     <a href="wirUeberUns/dieSatzung">{{ T "AStatute" }}</a>
                                 </li>
                                 <li>
-                                    <a href="#">{{ T "APress" }}</a>
+                                    <a href="wirUeberUns/Presse">{{ T "APress" }}</a>
                                 </li>
                                 <li>
                                     <a href="#">{{ T "AChronicle" }}</a>
