--- a/layouts/partials/common/megamenu.html
+++ b/layouts/partials/common/megamenu.html
@@ -90,7 +90,7 @@
                             <img src="/img/help.png" alt="Hile zur Selbsthilfe">
                             <ul>
                                 <li>
-                                    <a href="#">{{ T "wwDVegetableGarden" }}</a>
+                                    <a href="HilfeZurSelbsthilfe/Gemuesegarten">{{ T "wwDVegetableGarden" }}</a>
                                 </li>
                                 <li>
                                     <a href="#">{{ T "wwDAnimals" }}</a>
