--- a/public/scss/main.css
+++ b/public/scss/main.css
@@ -3211,7 +3211,8 @@
   background-color: white;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   transition: all 0.25s ease;
-  margin-bottom: 5px; }
+  margin-bottom: 5px;
+  color: black; }
   .light-theme .article-line .article-column {
     display: flex;
     flex-direction: column;
@@ -3227,15 +3228,17 @@
       max-height: 35px; }
     .light-theme .article-line .article-column .article-date {
       font-size: 12px;
-      padding-top: 5px; }
+      padding-top: 5px;
+      color: black; }
   .light-theme .article-line .article-title {
     padding: 10px;
     margin-left: 10px;
     color: black; }
 
-.light-theme .article-title:hover {
-  cursor: pointer;
-  color: blue; }
+.light-theme .article-line:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  scale: 1.01;
+  cursor: pointer; }
 
 @media (max-width: 580px) {
   .light-theme .article-line {
@@ -3253,7 +3256,8 @@
   background-color: #575651;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   transition: all 0.25s ease;
-  margin-bottom: 5px; }
+  margin-bottom: 5px;
+  color: lightgrey; }
   .dark-theme .article-line .article-column {
     display: flex;
     flex-direction: column;
@@ -3269,15 +3273,17 @@
       max-height: 35px; }
     .dark-theme .article-line .article-column .article-date {
       font-size: 12px;
-      padding-top: 5px; }
+      padding-top: 5px;
+      color: lightgrey; }
   .dark-theme .article-line .article-title {
     padding: 10px;
     margin-left: 10px;
     color: lightgrey; }
 
-.dark-theme .article-title:hover {
-  cursor: pointer;
-  color: blue; }
+.dark-theme .article-line:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  scale: 1.01;
+  cursor: pointer; }
 
 @media (max-width: 580px) {
   .dark-theme .article-line {
